--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,7 @@
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-beans</artifactId>
-                <version>${spring.version}</version>
+                <version>5.2.2.RELEASE</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
